--- a/templates/mines.html
+++ b/templates/mines.html
@@ -218,6 +218,7 @@
                                 headers: {
                                     'Content-Type': 'application/json'
                                 },
+                                credentials: 'include', 
                                 body: JSON.stringify({
                                     tileIndex: tileIndex
                                 })
@@ -251,6 +252,7 @@
 </main>
 </body>
 </html>
+
 
 
 
