--- a/templates/mines.html
+++ b/templates/mines.html
@@ -245,13 +245,14 @@
                 });
         </script>
 
-        <form method="POST" action="/mines">
+        <form method="POST" action="/startmines">
             <button type="submit">Play Mines</button>
         </form>
     </div>
 </main>
 </body>
 </html>
+
 
 
 
