--- a/templates/mines.html
+++ b/templates/mines.html
@@ -134,7 +134,7 @@
         .cell.mine { background: #b91c1c; }
         .cell.empty { background: #555; }
         .cell.clicked {  background: #22c55e; }
-        .cell.reveal {  background:   #4ade80; }
+        .cell.reveal {  background:  #86efac; }
         
         button {
             padding: 0.6rem 1.25rem;
@@ -267,6 +267,7 @@
 </main>
 </body>
 </html>
+
 
 
 
