--- a/templates/mines.html
+++ b/templates/mines.html
@@ -138,8 +138,8 @@
         }
         
         .cell.reveal {
-            background: #86efac;
-            filter: brightness(0.7);
+            background: #22c55e;
+            filter: brightness(0.4);
         }
         
         button {
@@ -278,6 +278,7 @@
 </main>
 </body>
 </html>
+
 
 
 
