--- a/templates/towers.html
+++ b/templates/towers.html
@@ -144,9 +144,9 @@
             color: #d1d5db;
             user-select: none;
         }
-
+        
         .payout span {
-            color: #60a5fa;
+            color: #22c55e; 
             font-size: 1.1rem;
         }
 
@@ -164,8 +164,6 @@
             background: #333;
             border-color: #555;
         }
-
-        /* ===== RESPONSIVE ===== */
 
         @media (max-width: 768px) {
             h1 {
@@ -267,6 +265,7 @@
 </main>
 </body>
 </html>
+
 
 
 
