--- a/templates/towers.html
+++ b/templates/towers.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Towers • AH Gambling</title>
+    <title>Towers - AH Gambling</title>
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
 
     <style>
@@ -265,6 +265,7 @@
 </main>
 </body>
 </html>
+
 
 
 
