--- a/templates/towers.html
+++ b/templates/towers.html
@@ -229,14 +229,50 @@ input {
     </div>
 </nav>
 </header>
-
 <main>
-<div class="card">
+  <div class="card">
     <h1>Towers</h1>
-</div>
+
+    <div class="payout-grid">
+      <div class="payout"><span>$</span>1,046</div>
+      <div class="payout"><span>$</span>1,046</div>
+      <div class="payout"><span>$</span>1,046</div>
+
+      <div class="payout"><span>$</span>762</div>
+      <div class="payout"><span>$</span>762</div>
+      <div class="payout"><span>$</span>762</div>
+
+      <div class="payout"><span>$</span>621</div>
+      <div class="payout"><span>$</span>621</div>
+      <div class="payout"><span>$</span>621</div>
+
+      <div class="payout"><span>$</span>461</div>
+      <div class="payout"><span>$</span>461</div>
+      <div class="payout"><span>$</span>461</div>
+
+      <div class="payout"><span>$</span>306</div>
+      <div class="payout"><span>$</span>306</div>
+      <div class="payout"><span>$</span>306</div>
+
+      <div class="payout"><span>$</span>232</div>
+      <div class="payout"><span>$</span>232</div>
+      <div class="payout"><span>$</span>232</div>
+
+      <div class="payout"><span>$</span>177</div>
+      <div class="payout"><span>$</span>177</div>
+      <div class="payout"><span>$</span>177</div>
+
+      <div class="payout"><span>$</span>151</div>
+      <div class="payout"><span>$</span>151</div>
+      <div class="payout"><span>$</span>151</div>
+    </div>
+
+    <form method="POST" action="/towers">
+      <button type="submit">Play Towers</button>
+    </form>
+  </div>
 </main>
 
-<!-- ===== WALLET MODAL ===== -->
 
 <div class="modal" id="walletModal">
     <div class="wallet">
@@ -325,6 +361,7 @@ tabs.forEach(tab => {
 
 </body>
 </html>
+
 
 
 
